<resources>
    <string name="facebook_app_id">555177991349994</string>
    <string name="twitter_key">UiaemesA70uoXOWaBeGcOHRII</string>
    <string name="twitter_secret">jvdO6sRmwKvgavW2UJxSYngHqgZGu9Jszt9PmdjXVzq3uHjfoS</string>
    <string name="fabric_key">uRHTNPaKrPhE3Xs8GF29dgeH9</string>
    <string name="app_name">UFRPE Conectada</string>
    <string name="start">Iniciar</string>
    <string name="next">Próximo</string>
    <string name="socialTitle">Fazer Login</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="google_plus">Google+</string>
    <string name="login_tip">Selecione a rede social de sua preferência para realizar o login. \n\nLembre-se que você deverá usar a mesma conta para realizar o login em outro dispositivo.</string>
    <string name="skip">Pular</string>
    <string name="confirmTitle">Confirmar Dados</string>
    <string name="confirm">Confirmar</string>
    <string name="first_name">Nome</string>
    <string name="last_name">Sobrenome</string>
    <string name="login_failed">Seu login falhou, tente novamente.</string>
    <string name="error_select_unit">Selecione uma unidade acadêmica</string>
    <string name="error_select_name">O campo nome é obrigatório</string>
    <string name="user_name">Usuário</string>
    <string name="password">Senha</string>
    <string name="loginTitle">Ambiente Virtual de Aprendizagem</string>
    <string name="ava_tip">Você deve realizar o login com sua conta do AVA. \n\nUse seu usuário que está informado no seu Sig@ e sua Senha de Serviços Integrados</string>
    <string name="access">Acessar</string>
    <string-array name="units">
        <item>Selecione sua unidade</item>
        <item>Dois Irmãos (SEDE)</item>
        <item>Garanhuns (UAG)</item>
        <item>Serra Talhada (UAST)</item>
        <item>Cabo de Santo Agostinho (UACSA)</item>
        <item>Educação a Distância</item>
        <item>CODAI</item>
    </string-array>
    <string name="overview">Visão Geral</string>
    <string name="timetable">Horário</string>
    <string name="restaurant">Restaurante Universitário</string>
    <string name="bus">Ônibus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Configurações</string>
    <string name="login_siteinfo_error">Houve um erro ao recuperar seu usuário</string>
    <string name="login_courses_error">Houve um error ao recuperar suas disciplinas</string>
    <string name="add_url">Acessar Link</string>
    <string name="submissionStatus">Detalhes da submissão</string>
    <string name="dueDate">Data de entrega</string>
    <string name="timeRemaining">Tempo restante</string>
    <string name="addAssign">Adicionar tarefa</string>
    <string name="goToSite">Ir para o site</string>
    <string name="contentUnavailable">Esse conteúdo não está disponível no aplicativo.</string>
    <string name="day">dias</string>
    <string name="hour">horas</string>
    <string name="minute">minutos</string>
    <string name="second">segundos</string>
    <string name="noDiscussions">Não há nenhum tópico nesse forum ainda</string>
    <string name="timend">"A data de encerramento pra essa tarefa já foi atingida"</string>
    <string name="replies">Respostas</string>
    <string name="today">Hoje</string>
    <string name="week">Semana</string>
    <string name="mon">Seg</string>
    <string name="tue">Ter</string>
    <string name="wed">Qua</string>
    <string name="thu">Qui</string>
    <string name="fri">Sex</string>
    <string name="home">Inicio</string>
    <string name="calendar">Calendário</string>
    <string name="noEvents">Você não tem nenhum evento para esse dia</string>
    <string name="loading">Carregando...</string>
    <string name="logout">Sair</string>
    <string name="loadingAVA">Realizando login</string>
    <string name="loadingUser">Carregando informações</string>
    <string name="loadingCourses">Carregando cadeiras</string>
    <string name="saving">Salvando informações</string>
    <string name="messages">Mensagens</string>
    <string name="send">Enviar</string>
    <string name="typeMessage">Digite sua mensagem</string>
    <string name="required_field">Digite sua mensagem</string>
    <string name="topics">Tópicos</string>
    <string name="participants">Participantes</string>
    <string name="grades">Notas</string>
    <string name="absences">Faltas</string>
    <string name="library">Biblioteca</string>
    <string name="search_book">Procurar livro</string>
    <string name="all">Tudo</string>
    <string name="title">Título</string>
    <string name="author">Autor</string>
    <string name="subject">Assunto</string>
    <string name="noBooks">Nenhum livro encontrado.</string>
    <string name="monday">Segunda</string>
    <string name="tuesday">Terça</string>
    <string name="wednesday">Quarta</string>
    <string name="thursday">Quinta</string>
    <string name="friday">Sexta</string>
    <string-array name="day_of_week">
        <item>Domingo</item>
        <item>Segunda-feira</item>
        <item>Terça-feira</item>
        <item>Quarta-feira</item>
        <item>Quinta-feira</item>
        <item>Sexta-feira</item>
        <item>Sábado</item>
    </string-array>
    <string-array name="month">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>
    <string name="title_activity_book_detail">Livro</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="book_detail">Dados</string>
    <string name="copies">Cópias</string>
    <string name="references">Referências</string>
    <string name="book_title">Detalhes do Livro</string>
    <string name="callNumber">Número de Chamada</string>
    <string name="bookTitle">Título Uniforme/Original</string>
    <string name="secondaryAuthor">Autor Secundário</string>
    <string name="bookMainTitle">Título Principal</string>
    <string name="bookPublish">Publicação</string>
    <string name="bookDescription">Descrição Física</string>
    <string name="bookISBN">ISBN</string>
    <string name="bookSubjects">Assuntos</string>
    <string name="ufrpe">UFRPE</string>
    <string name="system">Sistema</string>
    <string name="primaryAuthor">Autor Principal</string>
    <string name="quantityAvailable">Disponível no acervo</string>
    <string name="loaned">Emprestado</string>
    <string name="seeBooks">Ver exemplares</string>
    <string name="lunch">Almoço</string>
    <string name="main">Principal</string>
    <string name="grill">Grelha</string>
    <string name="vegetarian">Vegetariano</string>
    <string name="fastgrill">Fastgrill</string>
    <string name="accompaniment">Acompanhamento</string>
    <string name="salad">Salada</string>
    <string name="dessert">Sobremesa</string>
    <string name="juice">Suco</string>
    <string name="dinner">Jantar</string>
    <string name="about">Sobre</string>
    <string name="soap">Sopa</string>
    <string name="businessHours">Horário de atendimento</string>
    <string name="mondayToFriday">Segunda a Sexta-feira:</string>
    <string name="timeToLunch">- Almoço: 10h 30m as 14h</string>
    <string name="timeToDinner">- Jantar: 16h 30m as 19h</string>
    <string name="mealPrice">Valores das refeições</string>
    <string name="forClients">Para clientes cadastrados:</string>
    <string name="priceLunchClients">- Almoço: R$ 2,00</string>
    <string name="proceDinnerClients">- Jantar: R$ 1,50</string>
    <string name="forNonClients">Para clientes não cadastrados:</string>
    <string name="priceLunchNonClients">- Almoço: R$ 10,00</string>
    <string name="priceDinnerNonClients">- Jantar: R$ 9,00</string>
    <string name="close">Fechar</string>
    <string name="map">Contatos</string>
    <string name="ceagri1">CEAGRI I</string>
    <string name="ceagri2">CEAGRI II</string>
    <string name="cegoe">CEGOE</string>
    <string name="cegen">CEGEN</string>
    <string name="total">Total de Cópias</string>
    <string name="ufrpeCalendar">Calendário Acadêmico</string>
    <string name="subjects">Disciplinas</string>
    <string name="sync">Sincronizar</string>
    <string name="syncText">Caso algumas de suas disciplinas não estejam aparecendo, você pode tentar sincronizar para resolver esse problema.</string>
    <string name="syncText2">Lembrando que as disciplinas só apareceram no aplicativo quando estiverem disponível no AVA.</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancelar</string>
    <string name="share">Compartilhar</string>
    <string name="nextSubjects">Outras Cadeiras</string>
    <string name="expired_login">Seu login expirou</string>
    <string name="news">Notícias</string>
    <string-array name="places_names">
        <item>Universidade Federal Rural de Pernambuco (UFRPE)</item>
        <item>Biblioteca Central UFRPE</item>
        <item>Departamento de Matemática</item>
        <item>Departamento de Biologia - UFRPE</item>
        <item>Hospital Veterinário Escola do Departamento de Medicina Veterinária da UFRPE</item>
        <item>DLCH - Departamento de Letras e Ciências Humanas</item>
        <item>Programa de Pós-graduação em Física Aplicada - UFRPE</item>
        <item>Pró-Reitoria de Gestão Estudantil - PROGEST - UFRPE</item>
        <item>CENAPESQ - Centro de Apoio á Pesquisa da UFRPE</item>
        <item>Núcleo de Tecnologia da Informação - UFRPE</item>
        <item>Departamento de Estatística e Informática - UFRPE</item>
        <item>Centro de Ensino de Graduação - CEGOE/UFRPE</item>
        <item>Departamento de Física - UFRPE 5 ANDAR CEGEN</item>
        <item>Restaurante Universitário UFRPE</item>
        <item>Zootecnia - UFRPE</item>
        <item>Departamento de Economia Ufrpe</item>
        <item>Centro De Ciências Biológicas UFRPE</item>
        <item>Departamento de Estatística e Informática - Laboratórios de Ensino 05, 10 e 15 - UFRPE</item>
        <item>Incubatec - Incubadora UFRPE</item>
        <item>DEINFO - Departamento de Estatística e Informática da UFRPE</item>
        <item>Memorial da UFRPE</item>
        <item>Pro-Reitoria de Extensão da UFRPE (PRAE)</item>
        <item>Departamento De Medicina Veterinária - UFRPE</item>
        <item>Museu de Anatomia Comparada da UFRPE</item>
        <item>UFRPE Laboratório de Síntese de Compostos Bioativos</item>
        <item>Auditório Luis De Melo Amorim, DMV - UFRPE</item>
        <item>Departamento de Estatística e Informática - Laboratórios de Ensino 33, 35,37,39,41 e 43 - UFRPE</item>
        <item>Departamento de Educação - UFRPE</item>
        <item>Laboratório de Manejo do Solo - UFRPE</item>
        <item>Curso De LETRAS UFRPE</item>
        <item>Departamento de Tecnologia Rural Laboratório de Materiais de Construção : Professor Romildo Morant de Holanda</item>
        <item>Sala 2a quimica</item>
        <item>Área de Histologia/DMFA</item>
        <item>PADR - Programa de Pós-Graduação em Administração e Desenvolvimento</item>
        <item>SUGEP</item>
    </string-array>
</resources>