<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_view_day_black_24dp"
            android:title="@string/title_activity_main" />
        <item
            android:id="@+id/calendar"
            android:icon="@drawable/ic_today_black_24dp"
            android:title="@string/calendar" />
        <item
            android:id="@+id/messages"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/messages" />
    </group>

    <item android:title="UFRPE">
        <menu>
            <item
                android:id="@+id/library"
                android:icon="@drawable/ic_book_black_24dp"
                android:title="@string/library" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_input_black_24dp"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
